# proxy-coaching-argml-2022

./: README.md
data-gen/: README.md  dataGen.js
data-gen/data/policies/: genKbs.json
data-gen/used-data/: index.json  kbs.json  policies.json
evolutionary-exps/: .gitignore  README.md  evolutionary_coach.py  prudens_wrappers.py  pyproject.toml  symbolic_module.py  util_dataclasses.py  utils.py
evolutionary-exps/evolutionary_exps/: evolutionary_coach.py  prudens_bridge.js  prudens_wrappers.py  symbolic_module.py  utils.py
evolutionary-exps/src/: evolutionary_coach.py  symbolic_module.py  utils.py
prudens-local/: parsers.js  prudens.js  prudensUtils.js
tree-exps/: README.md  experiments.js
