[tool.poetry]
name = "evolutionary-exps"
version = "0.1.0"
description = ""
authors = ["marios <msthoma@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^1.55"
click = "^8.1.3"
matplotlib = "^3.5.3"
numpy = "^1.23.2"
pandas = "^1.4.3"
pydantic = "^1.9.2"
tabulate = "^0.8.10"
tqdm = "^4.64.0"
typer = "^0.6.1"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_evol_coach_exp = "evolutionary_exps.evolutionary_coach:app"
